Fixing spacing of components

--- a/src/styles/components/personal/about.module.scss
+++ b/src/styles/components/personal/about.module.scss
@@ -82,3 +82,7 @@
     height: auto;
     border-radius: 100%;
 }
+
+.filler_image img, .text {
+    margin-top: 80px;
+}
