--- a/src/styles/components/personal/footer.module.scss
+++ b/src/styles/components/personal/footer.module.scss
@@ -14,8 +14,9 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  bottom: 8px;
+  //bottom: 8px;
+  padding: 40px;
+  
 }
 
 // choose elements with logo class within .footer class elements
